added git ignore1
