# api/v1/handler.go
@@ -1,8 +1,13 @@
 package v1
 
 import (
+	"strconv"
+
+	"github.com/mirasildev/blog/api/models"
 	"github.com/mirasildev/blog/config"
 	"github.com/mirasildev/blog/storage"
+	
+	"github.com/gin-gonic/gin"
 )
 
 type handlerV1 struct {
@@ -20,4 +25,38 @@ func New(options *HandlerV1Options) *handlerV1 {
 		cfg:     options.Cfg,
 		storage: options.Storage,
 	}
+}
+
+func errorResponse(err error) *models.ErrorResponse {
+	return &models.ErrorResponse{
+		Error: err.Error(),
+	}
+}
+
+func validateGetAllParams(c *gin.Context) (*models.GetAllParams, error) {
+	var (
+		limit int = 10
+		page  int = 1
+		err   error
+	)
+
+	if c.Query("limit") != "" {
+		limit, err = strconv.Atoi(c.Query("limit"))
+		if err != nil {
+			return nil, err
+		}
+	}
+
+	if c.Query("page") != "" {
+		page, err = strconv.Atoi(c.Query("page"))
+		if err != nil {
+			return nil, err
+		}
+	}
+
+	return &models.GetAllParams{
+		Limit:  int32(limit),
+		Page:   int32(page),
+		Search: c.Query("search"),
+	}, nil
 }
